--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "in.bestpoint.listapplication"
+        applicationId "in.bestpoint.makemoneyonlinelistapplication"
         minSdkVersion 19
         targetSdkVersion 19
         versionCode 1
